Updated peak analysis

--- a/Mouse Genetics/Cholesterol/GWAS/snps_of_interest.Rmd
+++ b/Mouse Genetics/Cholesterol/GWAS/snps_of_interest.Rmd
@@ -171,6 +171,7 @@ summary.data %>%
         legend.title = element_text(size=12))
   
 ```
+
 ## Chromosome 1 QTL - Apoa2
 
 ```{r pk1.qtl}
@@ -189,7 +190,7 @@ summary.data %>%
              label=n)) +
   geom_bar(stat='identity',position="dodge", width=0.75) +
   geom_errorbar(position=position_dodge(width=0.75), width=0.5) +
-  #geom_text(aes(y=0),position=position_dodge(width=0.75)) +
+  geom_text(aes(y=0),position=position_dodge(width=0.75), vjust = -0.5) + 
   facet_grid(.~sex) +
   labs(y="Cholesterol (mg/dL)",
        x="",
@@ -216,7 +217,7 @@ summary.data %>%
              label=n)) +
   geom_bar(stat='identity',position="dodge", width=0.75) +
   geom_errorbar(position=position_dodge(width=0.75), width=0.5) +
-  #geom_text(aes(y=0),position=position_dodge(width=0.75)) +
+  geom_text(aes(y=0),position=position_dodge(width=0.75), vjust = -0.5) +
   facet_grid(.~sex) +
   labs(y="Cholesterol (mg/dL)",
        x="",
@@ -245,7 +246,7 @@ summary.data %>%
              label=n)) +
   geom_bar(stat='identity',position="dodge", width=0.75) +
   geom_errorbar(position=position_dodge(width=0.75), width=0.5) +
-  #geom_text(aes(y=0),position=position_dodge(width=0.75)) +
+  geom_text(aes(y=0),position=position_dodge(width=0.75), vjust = -0.5) + 
   facet_grid(.~sex) +
   labs(y="Cholesterol (mg/dL)",
        x="",
