--- a/Mouse Genetics/Cholesterol/GWAS/liver-mRNA-DESeq.qmd
+++ b/Mouse Genetics/Cholesterol/GWAS/liver-mRNA-DESeq.qmd
@@ -22,6 +22,10 @@ rna.data.raw <- all.data$data$raw %>% as.data.frame()
 
 library(janitor)
 rna.data.raw %>% t %>% as.data.frame -> rna.data
+gene.annotation <- all.data$annot.mrna %>%
+  mutate(start.true = start*1E6,
+         end.true = end*1E6)
+  
 ```
 
 Pulled out phenotype data and group data per sample
@@ -35,6 +39,7 @@ chol.phenotypes <-
   phenotype.data$data$raw %>% 
   as.data.frame %>%
   select(chol2) %>%
+  mutate(chol2.scale = scale(chol2,center=T)) %>%
   rownames_to_column("ID")
 
 library(forcats)
@@ -64,8 +69,9 @@ pheno.data.seq <-
   filter(ID %in% colnames(rna.data)) %>% #only phenotype data with seq data (475 mice)
   filter(!is.na(chol2)) %>% # cannot have undetermined cholesterol
   column_to_rownames("ID")
-  
-counts.table <- rna.data %>%
+
+counts.table <-  t(rna.data.raw) %>% #get normalized counts table %>%
+  as.data.frame %>%
   select(all_of(rownames(pheno.data.seq))) %>% #only counts tables with phenotype data
   mutate_all(as.integer) # made them all integers
 
@@ -79,7 +85,7 @@ all(rownames(pheno.data.seq) == colnames(counts.table))
 ```{r simple-models}
 dds.simple <- DESeqDataSetFromMatrix(countData = counts.table,
                               colData = pheno.data.seq,
-                              design = ~ chol2)
+                              design = ~ chol2.scale)
 
 smallestGroupSize <- 3
 keep <- rowSums(counts(dds.simple) >= 10) >= smallestGroupSize
@@ -87,12 +93,26 @@ dds.simple <- dds.simple[keep,]
 dds.simple <- DESeq(dds.simple)
 vsd.simple <- vst(dds.simple, blind=FALSE)
 #rld.simple <- rlog(dds.simple, blind=FALSE)
-results.simple <- results(dds.simple, alpha=0.05)
+results.simple <- results(dds.simple, alpha=0.05) 
 results.simple %>% summary
 plotMA(results.simple)
 plotPCA(vsd.simple, intgroup=c('sex','diet'))
-results.simple %>% as.data.frame %>% arrange(log2FoldChange) %>% head
-write_csv(as.data.frame(results.simple), "Cholesterol TWAS - Crude.csv")
+results.simple %>% 
+  as.data.frame %>%
+  rownames_to_column('gene.id') %>%
+  left_join(gene.annotation,by=c('gene.id'))%>% 
+  arrange(-abs(log2FoldChange)) -> results.simple.annotated
+
+results.simple.annotated %>%
+  head %>%
+  knitr::kable(caption="Top genes by fold change")
+
+write_csv(as.data.frame(results.simple.annotated), "Cholesterol TWAS - Crude.csv")
+
+normalized.counts <-  counts(dds.simple, normalized=TRUE)%>%  #get normalized counts table 
+  as.data.frame %>%
+  select(all_of(rownames(pheno.data.seq))) %>% #only counts tables with phenotype data
+  mutate_all(as.integer) # made them all integers
 ```
 
 ## Adjusting for Diet and Cholesterol
@@ -100,7 +120,7 @@ write_csv(as.data.frame(results.simple), "Cholesterol TWAS - Crude.csv")
 ```{r additive-models}
 dds.additive <- DESeqDataSetFromMatrix(countData = counts.table,
                               colData = pheno.data.seq,
-                              design = ~ sex + diet + chol2)
+                              design = ~ sex + diet + chol2.scale)
 
 smallestGroupSize <- 3
 keep <- rowSums(counts(dds.additive) >= 10) >= smallestGroupSize
@@ -111,11 +131,20 @@ vsd.additive <- vst(dds.additive, blind=FALSE)
 results.additive <- results(dds.additive, alpha=0.05)
 results.additive %>% summary
 plotMA(results.additive)
-plotPCA(vsd.additive, intgroup=c('sex','diet'))
-results.additive %>% as.data.frame %>% arrange(log2FoldChange) %>% head
-
+#plotPCA(vsd.additive, intgroup=c('sex','diet'))
 results.additive <- results(dds.additive)
-write_csv(as.data.frame(results.additive), "Cholesterol TWAS - Sex and Diet Adjusted.csv")
+results.additive %>% 
+  as.data.frame %>%
+  rownames_to_column('gene.id') %>%
+  left_join(gene.annotation,by=c('gene.id'))%>% 
+  arrange(-abs(log2FoldChange)) -> results.additive.annotated
+
+results.additive.annotated %>%
+  head %>%
+  knitr::kable(caption="Top genes by fold change, adjusting for sex and diet")
+
+
+write_csv(as.data.frame(results.additive.annotated), "Cholesterol TWAS - Sex and Diet Adjusted.csv")
 ```
 
 ## Adjusting for Sex
@@ -123,7 +152,7 @@ write_csv(as.data.frame(results.additive), "Cholesterol TWAS - Sex and Diet Adju
 ```{r sex-models}
 dds.sex <- DESeqDataSetFromMatrix(countData = counts.table,
                               colData = pheno.data.seq,
-                              design = ~ sex + chol2)
+                              design = ~ sex + chol2.scale)
 
 smallestGroupSize <- 3
 keep <- rowSums(counts(dds.sex) >= 10) >= smallestGroupSize
@@ -134,11 +163,67 @@ vsd.sex <- vst(dds.sex, blind=FALSE)
 results.sex <- results(dds.sex, alpha=0.05)
 results.sex %>% summary
 plotMA(results.sex)
-plotPCA(vsd.sex, intgroup=c('sex','diet'))
-results.sex %>% as.data.frame %>% arrange(log2FoldChange) %>% head
+#plotPCA(vsd.sex, intgroup=c('sex','diet'))
 
 results.sex <- results(dds.sex)
-write_csv(as.data.frame(results.sex), "Cholesterol TWAS - Sex Adjusted.csv")
+results.sex %>% 
+  as.data.frame %>%
+  rownames_to_column('gene.id') %>%
+  left_join(gene.annotation,by=c('gene.id'))%>% 
+  arrange(-abs(log2FoldChange)) -> results.sex.annotated
+
+results.sex.annotated %>%
+  head %>%
+  knitr::kable(caption="Top genes by fold change, adjusting for sex")
+write_csv(as.data.frame(results.sex.annotated), "Cholesterol TWAS - Sex Adjusted.csv")
+```
+
+# QTL Nominated Genes
+
+```{r }
+library(knitr)
+Genes.of.interest <- c("Apoa2", "Nrp4", "Acmsd", "Efcab2","Cdkal1","Apoa1","Scarb1")
+results.sex.annotated %>% 
+  filter(symbol %in% Genes.of.interest) %>% 
+  kable
+```
+
+# QTL position nominated associated mRNA 
+
+```{r}
+#Peak 12a
+results.sex.annotated %>% 
+  filter(chr==12) %>%
+  filter(start.true>16300000 & end.true<27800000 )%>%
+  arrange(-abs(log2FoldChange)) %>%
+  kable
+#Peak 12b
+results.sex.annotated %>% 
+  filter(chr==12) %>%
+  filter(start.true>75000000 & end.true<80000000 )%>%
+  arrange(-abs(log2FoldChange)) %>%
+  kable
+#Peak 13a
+results.sex.annotated %>% 
+  filter(chr==13) %>%
+  filter(start.true>28011631 & end.true<32375634 )%>%
+  arrange(-abs(log2FoldChange)) %>%
+  kable
+#Peak 13b
+results.sex.annotated %>% 
+  filter(chr==13) %>%
+  filter(start.true>51000000 & end.true<64000000 )%>%
+  arrange(-abs(log2FoldChange)) %>%
+  kable
+#Peak 13c
+results.sex.annotated %>% 
+  filter(chr==13) %>%
+  filter(start.true>97800000 & end.true<110000000 )%>%
+  arrange(-abs(log2FoldChange)) %>%
+  kable
+
+
+
 ```
 
 # Stratifying the Analyses by Diet
@@ -150,6 +235,59 @@ Still adjusting for sex
 ## HFD Only TWAS
 
 Still adjusting for sex
+
+# Plots of Gene-Cholesterol Relationships
+
+```{r mRNA-cholesterol-plots}
+gene.ids <- 
+  gene.annotation %>%
+  filter(symbol %in% Genes.of.interest) %>%
+  select(gene.id,symbol)
+
+library(ggplot2)
+
+for (row in rownames(gene.ids)) {
+  gene.id <- gene.ids[row,] %>% pull(gene.id)
+  gene.symbol <- gene.ids[row,] %>% pull(symbol)
+  gene.counts <- t(normalized.counts[gene.id,]) %>% as.data.frame
+  gene.counts.chol <- merge(gene.counts,pheno.data.seq,by='row.names') %>%
+    dplyr::rename('Expression'=2)
+  print(ggplot(gene.counts.chol,
+         aes(y=Expression,
+             x=chol2,
+             col=sex)) +
+    geom_point(size=0.5) +
+    facet_grid(.~diet) +
+    geom_smooth(method="lm") +
+    theme_classic(base_size=18) +
+    labs(y="mRNA Expression",
+         x="Cholesterol (mg/dL)",
+         title=gene.symbol))
+}
+```
+
+## Multivariate Statistics
+
+```{r genes-of-interest-stats}
+stats.table <- data.frame()
+library(broom)
+for (row in rownames(gene.ids)) {
+  gene.id <- gene.ids[row,] %>% pull(gene.id)
+  gene.symbol <- gene.ids[row,] %>% pull(symbol)
+  gene.counts <- t(normalized.counts[gene.id,]) %>% as.data.frame
+  gene.counts.chol <- merge(gene.counts,pheno.data.seq,by='row.names') %>%
+    dplyr::rename('Expression'=2)
+  lm.int <- lm(chol2~Expression+sex+diet+Expression:diet,data=gene.counts.chol)
+  lm.add <- lm(chol2~Expression+sex,data=gene.counts.chol)
+  stats.table[row,'symbol'] <- gene.symbol
+  stats.table[row,'coef.add'] <- tidy(lm.add)[2,'estimate']
+  stats.table[row,'coef.add.se'] <- tidy(lm.add)[2,'std.error']
+  stats.table[row,'coef.add.pval'] <- tidy(lm.add)[2,'p.value']
+  stats.table[row,'coef.int.pval'] <- tidy(lm.int)[5,'p.value']
+}
+
+knitr::kable(stats.table,caption="Sex adjusted associations between cholesterol and expression, and evidence of diet x expression interaction")
+```
 
 # Session Information
 
