--- a/Mouse Genetics/Cholesterol/GWAS/qtl-analysis.Rmd
+++ b/Mouse Genetics/Cholesterol/GWAS/qtl-analysis.Rmd
@@ -147,7 +147,11 @@ library(GWASTools)
 with(lmm.additive.data,manhattanPlot(p=p_wald,
                                chromosome=chromosome,
                                signif=suggestive.pval))
+```
 
+### Chromosome 1 Peak
+
+```{r chr1-peak}
 snp.pos <- 171425406
 library(forcats)
 peak1.b <- filter(lmm.additive.data,
@@ -180,6 +184,42 @@ ggplot(data=peak1.b,
   theme(legend.position=c(0.18,0.9),
         legend.text=element_text(size=8))
 ```
+
+### Chromosome 5 Peak
+
+```{r chr5-peak}
+snp.pos <- 123629774
+peak5 <- filter(lmm.additive.data,
+                  chromosome==5,
+                  position>snp.pos-20000000,
+                  position<snp.pos+20000000) %>%
+  mutate(alt=fct_recode(as.factor(alt),
+                        "C57BL/6J"="A",
+                        "NZO"="B",
+                        "Sv129"="C",
+                        "PWK"="D",
+                        "A/J"="E",
+                        "NOD"="F",
+                        "CAST"="G",
+                        "WSB"="H"))
+
+ggplot(data=peak5,
+       aes(x=position,
+       y=beta,
+       col=alt,
+       group=alt)) +
+  geom_line() +
+  geom_hline(yintercept=0,lty=2) +
+  labs(title="Strain Specific Effects",
+       y="Cholesterol Effect Size (mg/dL)",
+       x="Position on Chromosome 5") +
+  scale_color_discrete(name="") +
+  guides(col=guide_legend(ncol=2)) +
+  theme_classic(base_size=12) +
+  theme(legend.position=c(0.18,0.9),
+        legend.text=element_text(size=8))
+```
+
 
 ```{r additive-bslmm}
 ## BSLMM Analysis
